[Feature] AI 서버와의 통신 연결 추가