@@ -1,5 +1,6 @@
 package com.devita.domain.mission.service;
 
+import com.devita.common.exception.AiServerConnectionException;
 import com.devita.common.exception.ErrorCode;
 import com.devita.common.exception.ResourceNotFoundException;
 import com.devita.domain.category.domain.Category;
@@ -11,65 +12,74 @@ import com.devita.domain.todo.repository.TodoRepository;
 import com.devita.domain.user.domain.User;
 import com.devita.domain.user.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestTemplate;
 
 import java.time.LocalDate;
+import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
+@Transactional
 public class MissionService {
 
     private final RestTemplate restTemplate;
-
-    @Value("${ai.address}")
-    private String aiAddress;
-    private static final String DAILY_MISSION_API = "/ai/v1/mission/daily";
-    private static final String FREE_MISSION_API = "/ai/v1/mission/free";
-
-    private static final String FREE_MISSION = "자율 미션";
-
     private final TodoRepository todoRepository;
-
     private final CategoryRepository categoryRepository;
     private final UserRepository userRepository;
 
-    public DailyMissionAiResDTO requestDailyMission(Long userId, String category) {
-        // AI 서버 호출 부분 주석 처리
-        // DailyMissionAiReqDTO request = new DailyMissionAiReqDTO(userId, categp);
-        // return restTemplate.postForObject(aiAddress + DAILY_MISSION_API, request, MissionAiResDTO.class);
+    @Value("${ai.address}")
+    private String aiAddress;
 
-        // 테스트용 임의 데이터 반환
-        DailyMissionAiResDTO testResponse = new DailyMissionAiResDTO();
-        testResponse.setMissionTitle("테스트용 다형성 공부하기");
-        return testResponse;
+    private static final String DAILY_MISSION_API = "/ai/v1/mission/daily";
+    private static final String FREE_MISSION_API = "/ai/v1/mission/free";
+    private static final String FREE_MISSION = "자율 미션";
+
+    public DailyMissionAiResDTO requestDailyMission(Long userId, List<String> categories) {
+        try {
+            DailyMissionAiReqDTO request = new DailyMissionAiReqDTO(userId, categories);
+            log.debug("Requesting daily mission for user: {}, categories: {}", userId, categories);
+
+            DailyMissionAiResDTO response = restTemplate.postForObject(
+                    aiAddress + DAILY_MISSION_API,
+                    request,
+                    DailyMissionAiResDTO.class
+            );
+
+            return Objects.requireNonNull(response, "AI server returned null response");
+        } catch (RestClientException e) {
+            log.error("Failed to request daily mission from AI server", e);
+            throw new AiServerConnectionException(ErrorCode.AI_SERVER_ERROR);
+        }
     }
 
     public List<MissionAiResDTO> requestFreeMission(Long userId, String subCategory) {
-        // AI 서버 호출 부분 주석 처리
-        // FreeMissionAiReqDTO request = new FreeMissionAiReqDTO(userId, subCategory);
-        // FreeMissionAiResDTO response = restTemplate.postForObject(aiAddress + FREE_MISSION_API, request, FreeMissionAiResDTO.class);
-        // return response != null ? response.getMissions() : List.of();
+        try {
+            FreeMissionAiReqDTO request = new FreeMissionAiReqDTO(userId, subCategory);
+            log.debug("Requesting free mission for user: {}, subCategory: {}", userId, subCategory);
 
-        // 테스트용 임의 데이터 반환
-        MissionAiResDTO mission1 = new MissionAiResDTO();
-        mission1.setLevel(1);
-        mission1.setMissionTitle("테스트용 쉬운 미션");
+            FreeMissionAiResDTO response = restTemplate.postForObject(
+                    aiAddress + FREE_MISSION_API,
+                    request,
+                    FreeMissionAiResDTO.class
+            );
 
-        MissionAiResDTO mission2 = new MissionAiResDTO();
-        mission2.setLevel(2);
-        mission2.setMissionTitle("테스트용 중간 난이도 미션");
-
-        MissionAiResDTO mission3 = new MissionAiResDTO();
-        mission3.setLevel(3);
-        mission3.setMissionTitle("테스트용 어려운 미션");
-
-        return List.of(mission1, mission2, mission3);
+            return response != null ? response.getMissions() : Collections.emptyList();
+        } catch (RestClientException e) {
+            log.error("Failed to request free mission from AI server", e);
+            throw new AiServerConnectionException(ErrorCode.AI_SERVER_ERROR);
+        }
     }
 
-    public Todo saveFreeMission(Long userId, FreeSaveReqDTO freeSaveReqDTO){
+    @Transactional
+    public Todo saveFreeMission(Long userId, FreeSaveReqDTO freeSaveReqDTO) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new ResourceNotFoundException(ErrorCode.USER_NOT_FOUND));
 
